samples/_failures_safe/1761661234_1b3191_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e85e1123.c: In function ‘main’:
./samples/SAFE/__tmp_e85e1123.c:173:5: error: expected expression at end of input
  173 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_e85e1123.c:173:5: error: expected declaration or statement at end of input
